--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <title>PaintJS</title>
-</head>
-<body>
-    <canvas id = "jsCanvas" class="canvas"></canvas>
-    <div class="controls">
-        <div class="controls_range">
-            <input type="range" id="jsRange" min="0.1" max="5" default="2.5" step="0.1"></input>
-        </div>
-        <div class="controls_btns">
-            <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button>
-        </div>
-        <div class="controls_colors" id="jsColors">
-            <div class="controls_color jsColor" style="background-color: black"></div>
-            <div class="controls_color jsColor" style="background-color: gray"></div>
-            <div class="controls_color jsColor" style="background-color: pink"></div>
-            <div class="controls_color jsColor" style="background-color: red"></div>
-            <div class="controls_color jsColor" style="background-color: orange"></div>
-            <div class="controls_color jsColor" style="background-color: yellow"></div>
-            <div class="controls_color jsColor" style="background-color: green"></div>
-            <div class="controls_color jsColor" style="background-color: blue"></div>
-            <div class="controls_color jsColor" style="background-color: purple"></div>
-        </div>
-    </div>
-<script src="app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="styles.css">
+        <title>PaintJS</title>
+    </head>
+    <body>
+        <canvas id = "jsCanvas" class="canvas"></canvas>
+        <div class="controls">
+            <div class="controls_range">
+                <input type="range" id="jsRange" min="0.1" max="5" default="2.5" step="0.1"/>
+            </div>
+            <div class="controls_buttons">
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+            </div>
+            <div class="controls_colors" id="jsColors">
+                <div class="controls_color jsColor" style="background-color: black"></div>
+                <div class="controls_color jsColor" style="background-color: gray"></div>
+                <div class="controls_color jsColor" style="background-color: pink"></div>
+                <div class="controls_color jsColor" style="background-color: red"></div>
+                <div class="controls_color jsColor" style="background-color: orange"></div>
+                <div class="controls_color jsColor" style="background-color: yellow"></div>
+                <div class="controls_color jsColor" style="background-color: green"></div>
+                <div class="controls_color jsColor" style="background-color: blue"></div>
+                <div class="controls_color jsColor" style="background-color: purple"></div>
+            </div>
+            </div>
+        <script src="app.js"></script>
+    </body>
 </html>
